@@ -217,6 +217,26 @@ argument_list|(
 name|sum
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|Float
+operator|.
+name|isInfinite
+argument_list|(
+name|norm
+argument_list|)
+operator|||
+name|Float
+operator|.
+name|isNaN
+argument_list|(
+name|norm
+argument_list|)
+condition|)
+name|norm
+operator|=
+literal|1.0f
+expr_stmt|;
 name|weight
 operator|.
 name|normalize
